
Optimizations
-------------

 - Optimized foo in QSomeClass
    * See list of Important Behavior Changes below


****************************************************************************
*                          Library                                         *
****************************************************************************

QtCore
------

 - foo
    * bar

QtGui
-----

 - QBmpHandler
    * [QTBUG-7530] Fixed an infinite loop that could occur when reading invalid BMP images.

 - QGraphicsEffect
    * [QTBUG-6901] Fixed performance problem when translating items with
      graphics effects.

 - QImage
    * [QTBUG-7231] Avoid an unnecessary copy in QImage::scaled().

 - QPDFEngine
    * [QTBUG-7249] Fixed the encoding of the Tile and Creator tags in the PDF engine.

QtDBus
------

 - foo
    * bar

QtNetwork
---------

 - foo
    * bar

QtOpenGL
--------

 - QGLWidget
    * [QTBUG-7213] Fixed QGLWidget::renderPixmap() on Windows.

 - QGLPixelBuffer
    * [QTBUG-7476] Fixed a crash under X11 when drawing QPixmaps to QGLPixelBuffers.

 - QGL2PaintEngineEx
    * [QTBUG-7203] Reset the GL stencil mask, op and function in resetGLState().

QtScript
--------

 - foo
    * bar

QtSql
-----

 - foo
    * bar

QtXml
-----

 - foo
    * bar

QtMultimedia
------------

 - QAudioInput
    * [QTBUG-7044]: QAudioInput stopped working correctly after suspend()/resume() on linux.

Qt Plugins
----------

 - foo
    * bar

Third party components
----------------------

 - Updated foo to version 2.3.9.

 - Updated bar to the latest version from baz.org.


****************************************************************************
*                      Platform Specific Changes                           *
****************************************************************************

Qt for Unix (X11 and Mac OS X)
------------------------------

 - 

Qt for Linux/X11
----------------
  * Fix a bug where QPixmap::serialNumber was not set on a transformed pixmap